fix: Fix invisible search on hover (#442)

--- a/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
@@ -13,7 +13,7 @@ $search_entry_height: 36px;
   border-color: $borders_color;
 
   &:hover {
-    background-color: $hover_bg_color;
+    background-color: $bg_color;
     border-color: $hover_borders_color;
     color: $hover_fg_color;
   }
